--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 
   <table>
     <tr>
-      <th></th>
+      <th>Name</th>
+      <th>Phone Number</th>
+      <th>Bringing</th>
     </tr>
     <tr></tr>
     <tr></tr>
